# graphics-api-abstraction

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
cmake/: CPM.cmake
examples/: CMakeLists.txt
examples/imgui-renderer/: CMakeLists.txt
examples/imgui-renderer/include/imgui/: imgui_internal.h
examples/imgui-renderer/src/: main.cpp
examples/imgui-renderer/src/imgui/: imgui_draw.cpp  imgui_tables.cpp
examples/imgui-renderer/src/imgui/backends/: imgui_impl_glfw.cpp
examples/imgui-renderer/src/renderer/: ImGuiInstance.cpp  ImGuiInstance.h  ImGuiRenderer.cpp  ImGuiRenderer.h
include/graphicsAPI/common/: Buffer.h  CommandBuffer.h  CommandPool.h  Common.h  ComputeCommandBuffer.h  ComputePipeline.h  DepthStencilState.h  Device.h  DeviceFeatures.h  Framebuffer.h  GraphicsCommandBuffer.h  GraphicsPipeline.h  PlatformDevice.h  RenderPass.h  SamplerState.h  ShaderModule.h  ShaderStage.h  Texture.h  TextureStructures.h  Uniform.h  Util.h  VertexInputState.h
include/graphicsAPI/opengl/: Buffer.h  Context.h  Device.h  PlatformDevice.h
src/common/: SamplerState.cpp  ShaderModule.cpp  ShaderStage.cpp  Texture.cpp  TextureStructures.cpp  VertexInputState.cpp
src/opengl/: Buffer.cpp  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  ComputeCommandBuffer.cpp  ComputeCommandBuffer.h  ComputePipeline.cpp  ComputePipeline.h  Context.cpp  DepthStencilState.cpp  DepthStencilState.h  Device.cpp  Framebuffer.cpp  Framebuffer.h  GraphicsCommandBuffer.cpp  GraphicsCommandBuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  GraphicsPipelineReflection.cpp  GraphicsPipelineReflection.h  PlatformDevice.cpp  Renderbuffer.cpp  Renderbuffer.h  SamplerState.cpp  SamplerState.h  ShaderModule.cpp  ShaderModule.h  ShaderModuleReflection.cpp  ShaderModuleReflection.h  ShaderStage.cpp  ShaderStage.h  Texture.cpp  Texture.h  TextureBuffer.cpp  TextureBuffer.h  UniformBinder.cpp  UniformBinder.h  VertexArrayObject.cpp  VertexArrayObject.h  (+2 more)
src/util/: hashed_string.h
